--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">The Example APP - Kotlin</string>
+    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc porta, diam sed sagittis fringilla, tortor nisl dictum velit, vel fermentum nibh ex id odio. Morbi pulvinar elit vel libero consectetur egestas. Duis viverra turpis in arcu viverra viverra. Suspendisse ornare risus nec elementum aliquet. Morbi consequat massa tortor, nec vestibulum nibh condimentum vitae. Praesent consectetur, metus at sagittis luctus, urna augue auctor nisl, sed aliquam nunc lorem vitae velit. Duis luctus nunc eu risus fermentum sagittis. Sed venenatis egestas dolor, vitae dictum orci consequat ut. Aliquam eu erat nec turpis vulputate congue. Aenean sollicitudin porttitor tortor, fringilla consectetur lorem varius vel. Curabitur pharetra sagittis purus, molestie pretium dolor volutpat ac. Ut tempor diam lectus, in semper orci egestas ut.</string>
+    <string name="lessons">Lessons</string>
+    <string name="app_bar_home">Home</string>
+    <string name="app_bar_courses">Courses</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
