--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="startup_built">built by</string>
     <string name="startup_description_contentful_logo">Contentful Logo</string>
     <string name="startup_description_app_logo">The logo of the example app.</string>
+    <string name="card_button_view_course">view course</string>
 </resources>
