style course filter activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="lesson_duration">Duration: %d min • Skill level: %s</string>
     <string name="sample_code"><![CDATA[final CDAClient client =\n CDAClient\n .builder()\n .setToken("<cpa_token>")\n .preview()\n .setSpace("<space_id>")\n .build();]]></string>
     <string name="module_code_select_language"><![CDATA[<please select a language>]]></string>
+    <string name="categories_all">All</string>
+    <string name="module_code_source_copied">Copied to clipboard …</string>
 </resources>
