cleanup ui, remove warnings and errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="module_code_select_language"><![CDATA[<please select a language>]]></string>
     <string name="categories_all">All</string>
     <string name="module_code_source_copied">Copied to clipboard …</string>
+    <string translatable="false"
+            name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
 </resources>
