--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,11 @@
     <string name="lesson_number">Lesson %d</string>
     <string name="lesson_duration">Duration: %d min • Skill level: %s</string>
     <string name="sample_code"><![CDATA[final CDAClient client =\n CDAClient\n .builder()\n .setToken("<cpa_token>")\n .preview()\n .setSpace("<space_id>")\n .build();]]></string>
-    <string name="module_code_select_language"><![CDATA[<please select a language>]]></string>
+    <string name="module_code_select_language"><![CDATA[<Please select a language>]]></string>
     <string name="categories_all">All</string>
     <string name="module_code_source_copied">Copied to clipboard …</string>
+    <string name="error_lesson_id_not_found"><![CDATA[Could not find lesson: <b>%s.%s</b>.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
+    <string name="error_open_settings">Change Settings …</string>
     <string translatable="false"
-            name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
+    name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
 </resources>
