--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">The Example APP - Kotlin</string>
     <!--suppress Typos -->
     <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc porta, diam sed sagittis fringilla, tortor nisl dictum velit, vel fermentum nibh ex id odio. Morbi pulvinar elit vel libero consectetur egestas. Duis viverra turpis in arcu viverra viverra. Suspendisse ornare risus nec elementum aliquet. Morbi consequat massa tortor, nec vestibulum nibh condimentum vitae. Praesent consectetur, metus at sagittis luctus, urna augue auctor nisl, sed aliquam nunc lorem vitae velit. Duis luctus nunc eu risus fermentum sagittis. Sed venenatis egestas dolor, vitae dictum orci consequat ut. Aliquam eu erat nec turpis vulputate congue. Aenean sollicitudin porttitor tortor, fringilla consectetur lorem varius vel. Curabitur pharetra sagittis purus, molestie pretium dolor volutpat ac. Ut tempor diam lectus, in semper orci egestas ut.</string>
+    <string name="sample_code"><![CDATA[final CDAClient client =\n CDAClient\n .builder()\n .setToken("<cpa_token>")\n .preview()\n .setSpace("<space_id>")\n .build();]]></string>
     <string name="lessons">Lessons</string>
     <string name="app_bar_home">Home</string>
     <string name="app_bar_courses">Courses</string>
     <string name="action_settings">Settings</string>
-
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="startup_built">built by</string>
     <string name="startup_description_contentful_logo">Contentful Logo</string>
@@ -14,12 +14,18 @@
     <string name="card_button_view_course">view course</string>
     <string name="lesson_number">Lesson %d</string>
     <string name="lesson_duration">Duration: %d min • Skill level: %s</string>
-    <string name="sample_code"><![CDATA[final CDAClient client =\n CDAClient\n .builder()\n .setToken("<cpa_token>")\n .preview()\n .setSpace("<space_id>")\n .build();]]></string>
-    <string name="module_code_select_language"><![CDATA[<Please select a language>]]></string>
     <string name="categories_all">All</string>
+    <string name="module_code_select_language"><![CDATA[<Please select a language>]]></string>
     <string name="module_code_source_copied">Copied to clipboard …</string>
+    <string name="error_open_settings_button">Change Settings …</string>
     <string name="error_lesson_id_not_found"><![CDATA[Could not find lesson: <b>%s.%s</b>.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
-    <string name="error_open_settings">Change Settings …</string>
+    <string name="error_no_categories_found"><![CDATA[Could not fetch any categories.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
+    <string name="error_fetching_all_courses"><![CDATA[Could not fetch any courses.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
+    <string name="error_fetching_all_courses_from_category"><![CDATA[Could not fetch courses of category <tt>%s</tt>.]]></string>
+    <string name="error_fetching_course_from_slug"><![CDATA[Could not fetch course <tt>%s</tt>.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
+    <string name="error_fetching_layout"><![CDATA[Could not fetch main layout.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
+    <string name="error_parsing_route"><![CDATA[Could not find route <tt>%s</tt>.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
+    <string name="error_category_not_found"><![CDATA[Could not find category <tt>%s</tt>.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
     <string translatable="false"
-    name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
+            name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
 </resources>
