--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="app_bar_home">Home</string>
     <string name="app_bar_courses">Courses</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="startup_built">built by</string>
     <string name="startup_description_contentful_logo">Contentful Logo</string>
     <string name="startup_description_app_logo">The logo of the example app.</string>
@@ -28,4 +27,19 @@
     <string name="error_category_not_found"><![CDATA[Could not find category <tt>%s</tt>.<br/><br/>Please verify<ul><li>that you have access to it.</li></ul>]]></string>
     <string translatable="false"
             name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
+    <string name="imprint_company_label">Company</string>
+    <string name="imprint_company">Contentful GmbH</string>
+    <string name="imprint_office_label">Office</string>
+    <string name="imprint_office"><![CDATA[Ritterstr. 12–14\n10969 Berlin\nGermany]]></string>
+    <string name="imprint_court_label">Registration Court</string>
+    <string name="imprint_court">Berlin-Charlottenburg HRB 155607 B</string>
+    <string name="imprint_director_label">Managing Director</string>
+    <string name="imprint_director">Sascha Konietzke</string>
+    <string name="imprint_vat_label">VAT Number</string>
+    <string name="imprint_vat">DE275148225</string>
+    <string name="imprint_label">Imprint</string>
+    <string name="about_title">A reference for Android developers using Contentful</string>
+    <string name="about_description"><![CDATA[This is "The Android Example App in Kotlin". While building your own apps with Contentful, you can reference this app\'s code, found on <a href="https://github.com/contentful/the-example-app.kotlin">GitHub<a>.<br/><br/>You can also edit the content in the app by cloning the Contentful space to your own Contentful account by following the instructions <a href="https://github.com/contentful/content-models/blob/master/the-example-app/README.md">here</a>.<br/><br/>This app is also available in the following platforms and languages:]]></string>
+    <string name="about_others_hosted_label">WWW</string>
+    <string name="about_others_github_label">GitHub</string>
 </resources>
