--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,20 @@
     <string name="startup_description_contentful_logo">Contentful Logo</string>
     <string translatable="false"
             name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
+    <string name="settings_category_content_title">Fetch Content</string>
+    <string name="settings_title">settings</string>
+    <string name="settings_api_label">API to use</string>
+    <string name="settings_locale_label">Use locale</string>
+    <string name="settings_category_editorial_title">Editorial Features</string>
+    <string name="settings_editorial_label">Enable Editorial Features</string>
+    <string name="settings_editorial_summary">Enable to display an edit link and other contextual helpers to authors. You need to have access to the connected space to make this work.</string>
+    <string name="settings_category_space_title">Credentials</string>
+    <string name="settings_space_label">Change connected space</string>
+    <string name="settings_qr_summary">Select preview from any of your entries in the Contentful Webapp and show the resulting QR code to this app.</string>
+    <string name="settings_qr_label">Scan QR code to connect</string>
+    <string name="settings_about_label">About</string>
+    <string name="settings_imprint_label">Imprint</string>
+    <string name="settings_licences_label">Licences</string>
+    <string name="error_could_not_fetch_locales">Could not fetch locales. Please check parameters …</string>
+    <string name="error_settings_reset">Reset …</string>
 </resources>
