--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
-    <string name="about_description"><![CDATA[This is "The Android Example App in Kotlin". While building your own apps with Contentful, you can reference this app\'s code, found on <a href="https://github.com/contentful/the-example-app.kotlin">GitHub<a>.<br/><br/>You can also edit the content in the app by cloning the Contentful space to your own Contentful account by following the instructions <a href="https://github.com/contentful/content-models/blob/master/the-example-app/README.md">here</a>.<br/><br/>This app is also available in the following platforms and languages:]]></string>
-    <string name="about_title">A reference for Android developers using Contentful</string>
-    <string name="action_settings">Settings</string>
     <string name="app_bar_courses">Courses</string>
     <string name="app_bar_home">Home</string>
     <string name="app_name">The Example APP - Kotlin</string>
@@ -14,55 +11,15 @@
     <string name="error_fetching_layout"><![CDATA[Could not fetch main layout.<br/><br/>To mitigate, please try the following<ul><li>Make sure the content you are trying to access exists and is published.</li><li>Check if the content model has changed. Did you delete a content type or a required field?</li><li>Check if the content is in a draft or pending changes state (Content Delivery API), or if it has been deleted (Content Preview API & Content Delivery API).</li><li>Check if all required fields have content for this locale.</li><li>Verify that your space id and access tokens are correct and up to date.</li></ul>]]></string>
     <string name="error_lesson_id_not_found"><![CDATA[Could not find lesson: <b>%s.%s</b>.<br/><br/>To mitigate, please try the following<ul><li>Make sure the content you are trying to access exists and is published.</li><li>Check if the content model has changed. Did you delete a content type or a required field?</li><li>Check if the content is in a draft or pending changes state (Content Delivery API), or if it has been deleted (Content Preview API & Content Delivery API).</li><li>Check if all required fields have content for this locale.</li><li>Verify that your space id and access tokens are correct and up to date.</li></ul>]]></string>
     <string name="error_no_categories_found"><![CDATA[Could not fetch any categories.<br/><br/>To mitigate, please try the following<ul><li>Make sure the content you are trying to access exists and is published.</li><li>Check if the content model has changed. Did you delete a content type or a required field?</li><li>Check if the content is in a draft or pending changes state (Content Delivery API), or if it has been deleted (Content Preview API & Content Delivery API).</li><li>Check if all required fields have content for this locale.</li><li>Verify that your space id and access tokens are correct and up to date.</li></ul>]]></string>
-    <string name="error_open_settings_button">Change Settings …</string>
-    <string name="error_parsing_route"><![CDATA[Could not find route <tt>%s</tt>.<br/><br/>To mitigate, please try the following<ul><li>Make sure the content you are trying to access exists and is published.</li><li>Check if the content model has changed. Did you delete a content type or a required field?</li><li>Check if the content is in a draft or pending changes state (Content Delivery API), or if it has been deleted (Content Preview API & Content Delivery API).</li><li>Check if all required fields have content for this locale.</li><li>Verify that your space id and access tokens are correct and up to date.</li></ul>]]></string>
-    <string name="error_settings_cannot_change"><![CDATA[Cannot change settings, new settings contain invalid values.<br/>To mitigate, please try the following<ul><li>Make sure the content you are trying to access exists and is published.</li><li>Check if the content model has changed. Did you delete a content type or a required field?</li><li>Check if the content is in a draft or pending changes state (Content Delivery API), or if it has been deleted (Content Preview API & Content Delivery API).</li><li>Check if all required fields have content for this locale.</li><li>Verify that your space id and access tokens are correct and up to date.</li></ul>]]></string>
     <string name="error_no_internet_connection"><![CDATA[Could not reach <b>Contentful</b>.<br/><br/>To mitigate, please try to connect to the <b>internet</b> and try again.]]></string>
-    <string name="imprint_company">Contentful GmbH</string>
-    <string name="imprint_company_label">Company</string>
-    <string name="imprint_court">Berlin-Charlottenburg HRB 155607 B</string>
-    <string name="imprint_court_label">Registration Court</string>
-    <string name="imprint_director">Sascha Konietzke</string>
-    <string name="imprint_director_label">Managing Director</string>
-    <string name="imprint_label">Imprint</string>
-    <string name="imprint_office"><![CDATA[Ritterstr. 12–14\n10969 Berlin\nGermany]]></string>
-    <string name="imprint_office_label">Office</string>
-    <string name="imprint_vat">DE275148225</string>
-    <string name="imprint_vat_label">VAT Number</string>
     <string name="lesson_duration">Duration: %d min • Skill level: %s</string>
     <string name="lesson_number">Lesson %d</string>
     <string name="module_code_select_language"><![CDATA[<Please select a language>]]></string>
     <string name="module_code_source_copied">Copied to clipboard …</string>
-    <string name="settings_connected_successfully_to_space"><![CDATA[Successfully connected to space <tt>%s</tt>.]]></string>
-    <string name="settings_qr_description">Open \"Preview\" for this platform from any of your entries. Scan the resulting QR code here.</string>
-    <string name="settings_qr_finder_status_text">Place a qr code inside this rectangle to scan it.</string>
-    <string name="settings_qr_non_tea_url"><![CDATA[Found qr code content <tt>%s</tt> does not belong to this app. Please try a different QR code.]]></string>
     <string name="startup_built">built by</string>
     <string name="startup_description_app_logo">The logo of the example app.</string>
     <string name="startup_description_contentful_logo">Contentful Logo</string>
     <string translatable="false"
             name="line_numbers">01\n02\n03\n04\n05\n06\n07\n08\n09\n10\n11\n12\n13\n14\n15\n16\n17\n18\n19\n20\n21\n22\n23\n24\n25\n26\n27\n28\n29\n40\n41\n42\n43\n44\n45\n46\n47\n48\n49\n50\n51\n52\n53\n54\n55\n56\n57\n58\n59</string>
-    <string name="settings_category_content_title">Fetch Content</string>
-    <string name="settings_title">settings</string>
-    <string name="settings_api_label">API to use</string>
-    <string name="settings_locale_label">Use locale</string>
-    <string name="settings_category_space_title">Credentials</string>
-    <string name="settings_space_label">Change connected space …</string>
-    <string name="settings_qr_summary">Select preview from any of your entries in the Contentful Webapp and show the resulting QR code to this app.</string>
-    <string name="settings_qr_label">Scan QR code to connect</string>
-    <string name="settings_about_label">About</string>
-    <string name="settings_imprint_label">Imprint</string>
-    <string name="settings_licences_label">Licences</string>
-    <string name="error_could_not_fetch_locales">Could not fetch locales. Please check parameters …</string>
-    <string name="error_settings_reset">Reset …</string>
-    <string name="settings_credentials_title">Credentials</string>
-    <string name="settings_credentials_space_id_label">Change space id</string>
-    <string name="settings_credentials_space_title">Space Settings</string>
-    <string name="settings_credentials_space_connected">Connected to space</string>
-    <string name="settings_credentials_delivery_token_label">Change delivery token</string>
-    <string name="settings_credentials_preview_token_label">Change preview token</string>
-    <string name="settings_credentials_reset_button">Reset credentials</string>
-    <string name="settings_credentials_reset_description">Reset credentials to default settings, losing all the entered credentials.</string>
-    <string name="settings_share_qr_label">Share current configuration …</string>
-    <string name="settings_credentials_host_label">Change host</string>
+    <string name="action_reload">Reload</string>
 </resources>
